--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
         <div class="header-content">
           <div class="logo">
             <a href="/">
-              <img src="img/Logo.svg" alt="">
+              <img src="/img/Logo.svg" alt="">
             </a>
           </div>
           <ul class="menu">
@@ -50,8 +50,8 @@
           </ul>
 
           <ul class="secondary-menu">
-            <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-            <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+            <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+            <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
           </ul>
         </div>
       </div>
@@ -79,7 +79,7 @@
           <div class="contacts-content-data">
             <div>
               <div class="contacts-title">
-                <img src="img/address.svg" alt="">
+                <img src="/img/address.svg" alt="">
                 <span>Адрес</span>
               </div>
               <span>
@@ -91,21 +91,21 @@
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/phone.svg" alt="">
+                <img src="/img/phone.svg" alt="">
                 <span>Номер телефона</span>
               </div>
               <span>+852 6222 2154</span>
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/email.svg" alt="">
+                <img src="/img/email.svg" alt="">
                 <span>Email</span>
               </div>
               <span>hey@soilios.com</span>
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/manager.svg" alt="">
+                <img src="/img/manager.svg" alt="">
                 <span>Управляющий офиса</span>
               </div>
               <span>Andrew</span>
@@ -126,7 +126,7 @@
           <div class="contacts-content-data">
             <div>
               <div class="contacts-title">
-                <img src="img/address.svg" alt="">
+                <img src="/img/address.svg" alt="">
                 <span>Адрес</span>
               </div>
               <span>
@@ -137,7 +137,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/phone.svg" alt="">
+                <img src="/img/phone.svg" alt="">
                 <span>Номер телефона</span>
               </div>
               <span>(+001) 356 - 868 - 2454</span>
@@ -145,14 +145,14 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/email.svg" alt="">
+                <img src="/img/email.svg" alt="">
                 <span>Email</span>
               </div>
               <span>hey@soilios.com</span>
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/manager.svg" alt="">
+                <img src="/img/manager.svg" alt="">
                 <span>Управляющий офиса</span>
               </div>
               <span>John Vishinsky</span>
@@ -173,7 +173,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
           <div class="contacts-content-data">
             <div>
               <div class="contacts-title">
-                <img src="img/address.svg" alt="">
+                <img src="/img/address.svg" alt="">
                 <span>Адрес</span>
               </div>
               <span>
@@ -184,7 +184,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/phone.svg" alt="">
+                <img src="/img/phone.svg" alt="">
                 <span>Номер телефона</span>
               </div>
               <span>(+001) 356 - 868 - 2454</span>
@@ -192,14 +192,14 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/email.svg" alt="">
+                <img src="/img/email.svg" alt="">
                 <span>Email</span>
               </div>
               <span>hey@soilios.com</span>
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/manager.svg" alt="">
+                <img src="/img/manager.svg" alt="">
                 <span>Управляющий офиса</span>
               </div>
               <span>John Vishinsky</span>
@@ -212,7 +212,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
           <div class="contacts-content-data">
             <div>
               <div class="contacts-title">
-                <img src="img/address.svg" alt="">
+                <img src="/img/address.svg" alt="">
                 <span>Адрес</span>
               </div>
               <span>
@@ -223,7 +223,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/phone.svg" alt="">
+                <img src="/img/phone.svg" alt="">
                 <span>Номер телефона</span>
               </div>
               <span>(+001) 356 - 868 - 2454</span>
@@ -231,14 +231,14 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/email.svg" alt="">
+                <img src="/img/email.svg" alt="">
                 <span>Email</span>
               </div>
               <span>hey@soilios.com</span>
             </div>
             <div>
               <div class="contacts-title">
-                <img src="img/manager.svg" alt="">
+                <img src="/img/manager.svg" alt="">
                 <span>Управляющий офиса</span>
               </div>
               <span>John Vishinsky</span>
@@ -265,7 +265,7 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
         <div class="logo-data">
           <div class="logo">
             <a href="/">
-              <img src="img/Logo.svg" alt="">
+              <img src="/img/Logo.svg" alt="">
             </a>
           </div>
         </div>
@@ -366,14 +366,14 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
       <div class="footer-bottom">
         <span class="copy">	&copy; 2018 Copy Rights, Soilios</span>
         <ul class="secondary-menu">
-          <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-          <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+          <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+          <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
         </ul>
       </div>
     </div>
   </div>
 </div>
 
-<script src="js/bundle.js"></script>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
