--- a/index.html
+++ b/index.html
@@ -472,6 +472,6 @@
     <button class="scroll-btn"><img src="/img/left-arrow.svg" alt=""></button>
 </div>
 
-<script src="js/bundle.js"></script>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
