--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
                 <div class="header-content">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                     <ul class="menu">
@@ -49,8 +49,8 @@
                     </ul>
 
                     <ul class="secondary-menu">
-                        <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                        <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                        <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                        <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <p>Беспошлинная зона - Эльдорадо для бизнесменов. Начните бизнес с минимальными вложениями, выбрав оптимальный вариант вместе с SOILIOS LTD</p>
             </div>
             <div class="col col__img">
-                <img src="img/team.svg" alt="">
+                <img src="/img/team.svg" alt="">
             </div>
         </div>
     </div>
@@ -80,7 +80,7 @@
         <a name="search"></a>
         <div class="container">
             <h2 class="hero__title">Майнеры и Видеокарты</h2>
-            <img src="img/video-card.svg" alt="">
+            <img src="/img/video-card.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -101,7 +101,7 @@
         <a name="search"></a>
         <div class="container">
             <h2 class="hero__title">Смартфоны и ноутбуки</h2>
-            <img class="gadget__img" src="img/gadgets.svg" alt="">
+            <img class="gadget__img" src="/img/gadgets.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -123,7 +123,7 @@
                 <div class="logo-data">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -224,15 +224,15 @@
             <div class="footer-bottom">
                 <span class="copy">	&copy; 2018 Copy Rights, Soilios</span>
                 <ul class="secondary-menu">
-                    <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                    <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                    <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                    <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
 
     </div>
-    <button class="scroll-btn"><img src="img/left-arrow.svg" alt=""></button>
+    <button class="scroll-btn"><img src="/img/left-arrow.svg" alt=""></button>
 </div>
-<script src="js/bundle.js"></script>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
