--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
                 <div class="header-content">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                     <ul class="menu">
@@ -49,8 +49,8 @@
                     </ul>
 
                     <ul class="secondary-menu">
-                        <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                        <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                        <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                        <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 <p>Ваше время – бесценно, и вы сможете полностью использовать его для решения глобальных деловых задач. Логистику от А до Я мы готовы взять на себя.</p>
             </div>
             <div class="col col__img">
-                <img src="img/team.svg" alt="">
+                <img src="/img/team.svg" alt="">
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
         <a name="search"></a>
         <div class="container">
             <h2 class="hero__title">Поиск товара</h2>
-            <img src="img/search.svg" alt="">
+            <img src="/img/search.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -105,7 +105,7 @@
         <a name="control"></a>
         <div class="container">
             <h2 class="hero__title">Контроль качества</h2>
-            <img src="img/services-note.svg" alt="">
+            <img src="/img/services-note.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -119,7 +119,7 @@
         <a name="consolidation"></a>
         <div class="container">
             <h2 class="hero__title">Консолидация и хранение</h2>
-            <img src="img/consolidation.svg" alt="">
+            <img src="/img/consolidation.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -133,7 +133,7 @@
         <!--<a name="transport"></a>-->
         <div class="container">
             <h2 class="hero__title">Доставка товара</h2>
-            <img src="img/transport.svg" alt="">
+            <img src="/img/transport.svg" alt="">
         </div>
     </div>
     <div class="content">
@@ -149,7 +149,7 @@
                 <div class="logo-data">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -250,15 +250,15 @@
             <div class="footer-bottom">
                 <span class="copy">	&copy; 2018 Copy Rights, Soilios</span>
                 <ul class="secondary-menu">
-                    <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                    <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                    <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                    <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
 
     </div>
-    <button class="scroll-btn"><img src="img/left-arrow.svg" alt=""></button>
+    <button class="scroll-btn"><img src="/img/left-arrow.svg" alt=""></button>
 </div>
-<script src="js/bundle.js"></script>
+<script src="/js/bundle.js"></script>
 </body>
 </html>
