--- a/products.html
+++ b/products.html
@@ -52,6 +52,24 @@
                         <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
                         <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                     </ul>
+                    <div class="mobile">
+                        <button class="burger-menu burger-open"><img src="/img/burger-icon.svg" alt=""></button>
+
+                        <nav class="mobile__nav">
+                            <button class="burger-menu burger-close"><img src="/img/burger-close-icon.svg" alt=""></button>
+
+                            <ul>
+                                <li><a href="/">Главная</a></li>
+                                <li><a href="/services.html">Услуги</a></li>
+                                <li><a href="/products.html">Товары</a></li>
+                                <li><a href="/contacts.html">Контакты</a></li>
+                                <li class="mobile__contacts">
+                                    <a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a>
+                                    <a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
@@ -233,6 +251,6 @@
     </div>
     <button class="scroll-btn"><img src="/img/left-arrow.svg" alt=""></button>
 </div>
-<script src="/js/bundle.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
