--- a/contacts.html
+++ b/contacts.html
@@ -53,6 +53,24 @@
             <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
             <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
           </ul>
+          <div class="mobile">
+            <button class="burger-menu burger-open"><img src="/img/burger-icon.svg" alt=""></button>
+
+            <nav class="mobile__nav">
+              <button class="burger-menu burger-close"><img src="/img/burger-close-icon.svg" alt=""></button>
+
+              <ul>
+                <li><a href="/">Главная</a></li>
+                <li><a href="/services.html">Услуги</a></li>
+                <li><a href="/products.html">Товары</a></li>
+                <li><a href="/contacts.html">Контакты</a></li>
+                <li class="mobile__contacts">
+                  <a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a>
+                  <a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
@@ -374,6 +392,6 @@ China, Guangdong, Guangzhou city, Tianhe district, MaChang Road 16, R&F Ying She
   </div>
 </div>
 
-<script src="/js/bundle.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
